<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DianDianMi</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="account">用户名</string>
    <string name="message">请输入用户名</string>
    <string name="password">密码</string>
    <string name="confirmpassword">确认密码</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="ok">完成</string>
    <string name="uploadIcon">上传头像</string>
    <string name="rememberpassword">记住密码</string>
    <string name="aulog">自动登录</string>
    <string name="smile">点.笑</string>
    <string name="think">点.悟</string>
    <string name="discuss">点.评</string>
    <string name="note">点.记</string>
    <string name="music">点.乐</string>
    <string name="friend">点.友</string>
    <string name="hall">大厅</string>
    <string name="self">自己</string>
    <string name="frienddynamic">好友</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_discuss">DiscussActivity</string>
    <string name="title_activity_friend">FriendActivity</string>
    <string name="title_activity_music">MusicActivity</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="title_activity_smile">SmileActivity</string>
    <string name="title_activity_think">ThinkActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_write_pad">WritePadActivity</string>
    <string name="title_activity_upload_icon">UploadIconActivity</string>
    <string name="title_activity_cut_image">CutImageActivity</string>
    <string name="title_activity_select_file">SelectFileActivity</string>
    <string name="title_activity_user">UserActivity</string>

</resources>
