<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >
    <TableRow 
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
	        android:id="@+id/img_show"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_span="2"
	        android:src="@drawable/header"
	        android:maxWidth="70dp"
	        android:maxHeight="70dp"
	         />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textSize="10pt"
            />

        <EditText
            android:id="@+id/user"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/message"
            android:selectAllOnFocus="true" >

        </EditText>

    </TableRow>
    <TableRow>
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="10pt"
            />
        <EditText 
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </TableRow>
 	<TableRow >
   	   <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirmpassword"
            android:textSize="10pt"
            />
        <EditText 
            android:id="@+id/confirmpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
   	</TableRow>
   	<TableRow >
   	   <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sex"
            android:textSize="10pt"
            />
    	<RadioGroup
    	    android:id="@+id/radioGroup"
    	    android:orientation="horizontal"
    	    android:layout_gravity="center_horizontal">
    	    <RadioButton 
    	        android:id="@+id/male"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:text="@string/male"/>
    	    <RadioButton 
    	        android:id="@+id/female"
    	        android:layout_width="wrap_content"
    	        android:layout_height="wrap_content"
    	        android:text="@string/female"/>
    	</RadioGroup> 
   	</TableRow>
   	<TableRow
   	    android:layout_width="match_parent"
        android:layout_height="wrap_content">
   	<Button 
   	    android:id="@+id/uploadIcon"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_span="2"
   	    android:text="@string/uploadIcon"/>
   
	</TableRow>
   	<TableRow
   	    android:layout_width="match_parent"
        android:layout_height="wrap_content">
   	<Button 
   	    android:id="@+id/ok"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_span="2"
   	    android:text="@string/ok"/>
   
	</TableRow>
</TableLayout>